adding this file in git for linux command

--- a/styles.css
+++ b/styles.css
@@ -42,3 +42,5 @@ footer {
     width: 100%;
     bottom: 0;
 }
+adding some line to the styless  and check the update for any changes in contednt file 
+also adding some point to the last option 
