--- a/styles.css
+++ b/styles.css
@@ -44,3 +44,12 @@ footer {
 }
 adding some line to the styless  and check the update for any changes in contednt file 
 also adding some point to the last option 
+
+
+hi bhai
+keese ho 
+aaj baat hua tha kya 
+thmra
+mere see
+agr ho too btna
+
